[package]
name = "streaming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.4"
tonic = "0.11.0"
prost-types = "0.12.4"
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
tokio-stream = "0.1"
thiserror = "1.0.61"
tracing = "0.1.40"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.11.0"
